# quick_animaker_v2

./: LICENSE  README.md  THIRD_PARTY.md  dart_test.yaml  pubspec.yaml  test_gate_out.txt
.github/workflows/: apple.yml  ci.yml
android/app/: build.gradle.kts
docs/: Active_Cut_State_Design.md  Architecture.md  Audio_Sync_Program.md  Bitmap_Canvas_Brush_Architecture.md  Brush_App_Integration_Decisions.md  Brush_Architecture_Current.md  Brush_V1_Complete.md  Brush_V1_Integration_Review.md  Current_Brush_Architecture.md  Current_Canvas_Cache_Storage_Architecture.md  Current_Cut_Management_Architecture.md  Current_Docs_Index.md  Current_Implementation_Roadmap.md  Current_Project_Architecture.md  Current_Storyboard_Architecture.md  Current_Test_Architecture.md  Current_Timeline_Architecture.md  Current_UI_Product_Policy.md  Cut_Conte_Direction_Notes.md  Cut_Management_Command_Design.md  Cut_Management_Policy.md  Cut_Structure_Audit.md  Cut_Structure_Preparation.md  Design_CutMetadata_CanvasPlanning.md  Handoff_QuickAnimaker_v2_Current.md  Handoff_Use_Gpt_flow.md  Id_Scope_Decision.md  ImplementationPlan.md  LongTerm_Performance_Architecture.md  LongTerm_Roadmap_After_Phase_150.md  LongTerm_StoryboardPanel_TimelineDesign.md  LongTerm_Timeline_Range_Semantics.md  LongTerm_Timesheet_Layer_Sections.md  Phase_0_1_Codex_Task.md  Phase_100_Codex_Task.md  Phase_101_Codex_Task.md  Phase_102_Codex_Task.md  Phase_103_Codex_Task.md  Phase_104R_Codex_Task.md  Phase_104_Codex_Task.md  (+230 more)
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/dev/: brush_lab_main.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: CMakeLists.txt  my_application.cc  pen_sidecar.cc  pen_sidecar.h
macos/Runner/: Info.plist  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
native/: CMakeLists.txt  qa_engine.c  qa_tablet_win.c
test/: flutter_test_config.dart  widget_test.dart
test/architecture/: brush_app_integration_decisions_test.dart  brush_architecture_current_documentation_test.dart  brush_cache_invalidation_sink_naming_decisions_test.dart  brush_coordinator_naming_decisions_test.dart  brush_t2_foundation_guard_test.dart  (+5 more)
tool/: abr_inspect.dart  brush_commit_benchmark.dart  sut_inspect.dart  wintab_probe.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+1198 files in other folders)
